# IA-para-exoplanetas

./: .env.example  .gitignore  COMMIT_MESSAGE.md  MONGODB_INTEGRATION.md  README.md  README_BACKEND_MONGODB.md  README_NEW.md  TESTING_REPORT.md  docker-compose.dev.yml  pyproject.toml  requirements.txt  setup_mongodb_environment.bat  start.bat  start.sh  start_backend.bat  test_exoplanets.csv
.github/: copilot-instructions.md
.github/context/: challenge-description.md  datasets-preprocessing.md  ensemble-algorithms.md  implementation-methodology.md  metrics-evaluation.md  references-resources.md  theoretical-foundations.md  web-interface-deployment.md
FRONT-END/APRENDE/: aprende.html  script.js  style.css
ML DEV/: Clasification.py  Process.py  README_ML.md  README_ML_EN.md  README_ML_NEW.md  advanced_visualization.py  comparative_analysis.py  debug_training.py  diagnose_features.py  fixed_predictor.py  generate_prediction_charts.py  generate_statistics_csv.py  inspect_model.py  load_csv_robust.py  migrate_models.py  model_imports.py  predict_exoplanets.py  predict_updated.py  quick_charts.py  retrain_fixed.py  show_summary.py  simple_predictor_fixed.py  simple_retrain.py  test_fix.py  test_full_analysis.py  test_model_loading.py  test_simple_predictor.py  test_simple_train.py  test_training_fix.py  train_ensemble.py  train_ensemble_CORRECTED.py  train_ensemble_FAST.py
exoPlanet_results/: accuracy_metrics_20251004_202348.csv  astronomical_coordinates_20251004_202348.csv  comparative_summary_20251004_221921.csv  comparative_summary_20251004_222212.csv  confidence_distribution_20251004_202348.csv  cumulative_2025.10.04_18.21.10Prueba1_FIXED_predictions_20251005_005519.csv  cumulative_2025.10.04_18.21.10Prueba1_predictions_20251004_200455.csv  cumulative_2025.10.04_18.21.10Prueba1_predictions_20251005_012139.csv  general_statistics_20251004_202348.csv  top_candidates_20251004_202348.csv
scripts/: init-mongo.js  populate_mongodb_simple.py  populate_mongodb_test_data.py
(+77 files in other folders)
