[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "exoplanet-detection-ai"
version = "1.0.0"
description = "AI/ML system for exoplanet detection using ensemble learning algorithms"
authors = [
    {name = "NASA Space Apps Challenge 2025 Team", email = "team@example.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "scikit-learn>=1.3.0",
    "lightgbm>=4.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "tsfresh>=0.20.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "scipy>=1.11.0",
    "joblib>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.17.0",
    "requests>=2.31.0",
    "astropy>=5.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
]
prod = [
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
    "gunicorn>=21.2.0",
]

[project.urls]
Homepage = "https://github.com/Itzel921/IA-para-exoplanetas"
Documentation = "https://github.com/Itzel921/IA-para-exoplanetas/docs"
Repository = "https://github.com/Itzel921/IA-para-exoplanetas.git"
Issues = "https://github.com/Itzel921/IA-para-exoplanetas/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"